tests/rosetta/transpiler/CS/ackermann-function-3.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(44,27): error CS0019: Operator '*' cannot be applied to operands of type 'int' and 'object' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(46,18): error CS0019: Operator '*' cannot be applied to operands of type 'object' and 'object' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(55,17): error CS0019: Operator '>' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(56,18): error CS0019: Operator '/' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(66,14): error CS0019: Operator '<=' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(69,25): error CS0019: Operator '+' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(72,25): error CS0019: Operator '+' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(75,26): error CS0019: Operator '*' cannot be applied to operands of type 'int' and 'object' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(84,26): error CS0019: Operator '*' cannot be applied to operands of type 'int' and 'object' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(88,32): error CS0019: Operator '-' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(90,28): error CS0019: Operator '-' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/Program.cs(90,51): error CS0019: Operator '-' cannot be applied to operands of type 'object' and 'int' [/tmp/TestCSTranspiler_Rosetta_Golden3646670311/001/app.csproj]

The build failed. Fix the build errors and run again.
